--- a/omod/src/main/resources/messages_es.properties
+++ b/omod/src/main/resources/messages_es.properties
@@ -1,27 +1,110 @@
 @MODULE_ID@.title=Módulo de Radiología
-@MODULE_ID@.home.title=Radiology
-@MODULE_ID@.manageOrders=Administrar &Oacute;rdenes de Radiolog&iacute;a
+@MODULE_ID@.gutterlist.title=Radiología
+@MODULE_ID@.administrationSection.links.dashboard=Radiology Dashboard
+@MODULE_ID@.dashboard.title=Radiología
+@MODULE_ID@.patientDashboardForm.tabs.radiology=Radiología
 @MODULE_ID@.radiologyOrder=Orden de radiología
 @MODULE_ID@.radiologyOrders=Ordenes de radiología
 @MODULE_ID@.addOrder=Agregar Orden de Radiolog&iacute;a
-@MODULE_ID@.imagingProcedure=Imaging Procedure
+@MODULE_ID@.imagingProcedure=Procedimiento de formación de imágenes
+
+@MODULE_ID@.report.template.search.title=Título
+@MODULE_ID@.report.template.imported=Plantilla de informe importada
+@MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
+
+@MODULE_ID@.localHeader.links.patientDashboard=Patient Dashboard
+@MODULE_ID@.localHeader.links.radiologyOrder=Radiology Order
 
 @MODULE_ID@.discontinuedOrder=Orden suspendido
-@MODULE_ID@.isNotActiveOrder=This order is not active.
+@MODULE_ID@.isNotActiveOrder=Esta orden no está activa.
 @MODULE_ID@.OrderListEmpty=Actualmente, no hay Ordenes de Radiología
+@MODULE_ID@.orderNumber=Número de orden
 @MODULE_ID@.scheduledDate=Fecha Planificado
 @MODULE_ID@.stopDate=Fecha Final
 @MODULE_ID@.dateActivated=Fecha Activado
 @MODULE_ID@.startDate=Fecha Inicial
 @MODULE_ID@.endDate=Fecha Final
-@MODULE_ID@.find=Encontrar
-@MODULE_ID@.clearResults=Limpiar Resultados
-@MODULE_ID@.show=Mostrar
-@MODULE_ID@.entries=entradas
-@MODULE_ID@.viewing=Viendo
-@MODULE_ID@.of=de
-@MODULE_ID@.first=Primera
-@MODULE_ID@.last=Ultima
+
+@MODULE_ID@.dashboard.tabs.filters.find=Encontrar
+@MODULE_ID@.dashboard.tabs.filters.clearFilters=Limpiar filtros
+@MODULE_ID@.dashboard.tabs.orders=Pedidos
+@MODULE_ID@.dashboard.tabs.orders.filters.patient=Paciente
+
+@MODULE_ID@.dashboard.tabs.reports=Informes
+@MODULE_ID@.dashboard.tabs.reports.filters.date=Fecha
+@MODULE_ID@.dashboard.tabs.reports.filters.date.from=desde
+@MODULE_ID@.dashboard.tabs.reports.filters.date.to=hasta
+@MODULE_ID@.dashboard.tabs.reports.filters.status=Estado
+@MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Intérprete principal de resultados
+@MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Propuestas después de dos condiciones
+
+@MODULE_ID@.dashboard.tabs.reportTemplates=Plantillas de Informes
+@MODULE_ID@.dashboard.tabs.reportTemplates.filters.title=Título
+@MODULE_ID@.dashboard.tabs.reportTemplates.boxheader=Plantillas de Informes
+
+@MODULE_ID@.reportTemplates.import.popup.boxheader=Importar plantilla de informe
+@MODULE_ID@.reportTemplates.import.popup.upload=Subir
+@MODULE_ID@.reportTemplates.import.popup.button=Importar plantilla de informe
+
+@MODULE_ID@.datatables.noresult=Sin resultado
+@MODULE_ID@.datatables.loading=Cargando...
+@MODULE_ID@.datatables.show=Mostrar
+@MODULE_ID@.datatables.viewing=Mostrando
+@MODULE_ID@.datatables.entries=entradas
+@MODULE_ID@.datatables.of=de
+@MODULE_ID@.datatables.previous=Anterior
+@MODULE_ID@.datatables.first=Primero
+@MODULE_ID@.datatables.next=Siguiente
+@MODULE_ID@.datatables.last=Último
+
+@MODULE_ID@.datatables.column.order.orderNumber=Número de pedido
+@MODULE_ID@.datatables.column.order.patient=Paciente
+@MODULE_ID@.datatables.column.order.priority=Prioridad
+@MODULE_ID@.datatables.column.order.imagingProcedure=Procedimiento de formación de imágenes
+@MODULE_ID@.datatables.column.order.referringPhysician=Médico de referencia
+@MODULE_ID@.datatables.column.order.scheduledDate=Fecha planificada
+@MODULE_ID@.datatables.column.order.dateActivated=Fecha activada
+@MODULE_ID@.datatables.column.order.reason=Razón (codificada)
+@MODULE_ID@.datatables.column.order.reasonNonCoded=Razón (texto libre)
+@MODULE_ID@.datatables.column.order.clinicalHistory=Historia clínica
+@MODULE_ID@.datatables.column.order.instructions=Instrucciones
+
+@MODULE_ID@.datatables.column.report.view=Ver
+@MODULE_ID@.datatables.column.report.order=Orden de radiología
+@MODULE_ID@.datatables.column.report.date=Fecha
+@MODULE_ID@.datatables.column.report.principalResultsInterpreter=Intérprete principal de resultados
+@MODULE_ID@.datatables.column.report.status=Estado
+@MODULE_ID@.datatables.column.report.dateCreated=Fecha de creación
+@MODULE_ID@.datatables.column.report.createdBy=Creado por 
+
+@MODULE_ID@.datatables.column.action=Acción
+@MODULE_ID@.datatables.column.report.template.id=Id
+@MODULE_ID@.datatables.column.report.template.title=Título
+@MODULE_ID@.datatables.column.report.template.creator=Creador
+@MODULE_ID@.datatables.column.report.template.publisher=Editor
+@MODULE_ID@.datatables.column.report.template.type=Tipo
+@MODULE_ID@.datatables.column.report.template.description=Descripción
+@MODULE_ID@.datatables.column.report.template.rights=Derechos
+
+@MODULE_ID@.report.boxheader=Informes
+
+@MODULE_ID@.report.principalResultsInterpreter=Intérprete principal de resultados
+
+@MODULE_ID@.report.form.unclaim.dialog.title=Informe sin reclamo
+@MODULE_ID@.report.form.unclaim.dialog.message=¿Está seguro que desea dejar de reclamar este informe?
+@MODULE_ID@.report.form.unclaim.dialog.button.ok=Ok
+@MODULE_ID@.report.form.unclaim.dialog.button.cancel=Cancelar
+
+@MODULE_ID@.report.status.COMPLETED=Terminado
+@MODULE_ID@.report.status.CLAIMED=Reclamado
+@MODULE_ID@.report.status.DISCONTINUED=Interrumpido
+
+@MODULE_ID@.radiologyOrder.orderReason=Razón (codificada)
+@MODULE_ID@.radiologyOrder.orderReasonNonCoded=Razón (texto libre)
+@MODULE_ID@.radiologyOrder.clinicalHistory=Historia clínica
+
+@MODULE_ID@.MrrtReportTemplate.imported=Plantilla de informe importada
+@MODULE_ID@.MrrtReportTemplate.not.imported.empty=Falló al importar plantilla de informe debido a que estaba vacía
 
 @MODULE_ID@.patientId=Id del Paciente
 @MODULE_ID@.patientFullName=Nombre del Paciente
@@ -32,7 +115,6 @@
 @MODULE_ID@.appoinmentDate=Fecha de la Cita
 @MODULE_ID@.modality=Modalidad
 @MODULE_ID@.crossDate=La fecha final es m&aacute;s reciente que la fecha final\!
-@MODULE_ID@.mwlStatus=PACS Modality Worklist Sync Status
 
 @MODULE_ID@.patient=Paciente
 @MODULE_ID@.patientOverview=Informaci&oacute;n del Paciente
@@ -44,13 +126,11 @@
 @MODULE_ID@.minChars=Minimo 3 Letras
 @MODULE_ID@.studyPerformed=Estudio ya realizado\!
 @MODULE_ID@.studyResults=Resultados del estudio
-@MODULE_ID@.failWorklist= Failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
-@MODULE_ID@.savedFailWorklist= Order Saved in OpenMRS but failed sending order request to the PACS. Check if the PACS is online or if IP address, HL7 port have been set correctly.
 
 # Urgency
-@MODULE_ID@.ROUTINE=Routine
-@MODULE_ID@.STAT=Emergency
-@MODULE_ID@.ON_SCHEDULED_DATE=On scheduled date
+@MODULE_ID@.ROUTINE=Rutina
+@MODULE_ID@.STAT=Emergencia
+@MODULE_ID@.ON_SCHEDULED_DATE=Bajo fecha planificada
 
 # Scheduled Status
 @MODULE_ID@.SCHEDULED=PROGRAMADA
@@ -65,26 +145,26 @@
 @MODULE_ID@.COMPLETED=TERMINADO
 
 # Mwl Sync Status
-@MODULE_ID@.IN_SYNC=In Sync
-@MODULE_ID@.OUT_OF_SYNC=Out of Sync
+@MODULE_ID@.IN_SYNC=En sincronía
+@MODULE_ID@.OUT_OF_SYNC=Fuera de sincronía
 
 @MODULE_ID@.radiologyReportTitle=Reporte
-@MODULE_ID@.radiologyReportId=Id
+@MODULE_ID@.radiologyReportId=Identification
 @MODULE_ID@.reportStatus=Estado
 @MODULE_ID@.radiologyReportDiagnosis=Diagnóstico
-@MODULE_ID@.radiologyReportProvider=Results Interpreter
-@MODULE_ID@.radiologyReportDate=Completion Date
-@MODULE_ID@.radiologyReportClaim=Claim Report
-@MODULE_ID@.radiologyReportUnclaim=Unclaim
+@MODULE_ID@.radiologyReportProvider=Intérprete de resultados
+@MODULE_ID@.radiologyReportDate=Fecha ejecución
+@MODULE_ID@.radiologyReportClaim=Informe de reclamo
+@MODULE_ID@.radiologyReportUnclaim=Sin reclamar
 @MODULE_ID@.radiologyReportSave=Guardar como borrador
 @MODULE_ID@.radiologyReportComplete=Guardar y finalizar
-@MODULE_ID@.radiologyReportResume=Resume work on Report
-@MODULE_ID@.radiologyReportShow=Show completed Report
+@MODULE_ID@.radiologyReportResume=Reanudar el trabajo sobre el Informe
+@MODULE_ID@.radiologyReportShow=Mostrar informe completado
 
 # Modality Names
-@MODULE_ID@.CR=Computed Radiography
-@MODULE_ID@.MR=Magnetic Resonance
-@MODULE_ID@.CT=Computed Tomography
-@MODULE_ID@.NM=Nuclear Medicine
-@MODULE_ID@.US=Ultrasound
-@MODULE_ID@.XA=X-Ray Angriography
+@MODULE_ID@.CR=Radiografía computada
+@MODULE_ID@.MR=Resonancia magnética
+@MODULE_ID@.CT=Tomografía computada
+@MODULE_ID@.NM=Medicina Nuclear
+@MODULE_ID@.US=ultrasonido
+@MODULE_ID@.XA=Angiografía Rayos X
