RAD-321 REST search for RadiologyOrder by urgency
* add new parameter to radiology order rest search
* add select for urgencies to radiologyOrderTab.jsp
* add and modify entries in messages.properties
* add css styling for select tag
* add component tests for RadiologyOrderSearchHandler

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -25,7 +25,8 @@
 @MODULE_ID@.startDate=Start Date
 @MODULE_ID@.endDate=End Date
 
-@MODULE_ID@.dashboard.tabs.filters.find=Find
+@MODULE_ID@.dashboard.tabs.filters.filterby=Filter by
+@MODULE_ID@.dashboard.tabs.filters.filter=Filter
 @MODULE_ID@.dashboard.tabs.filters.clearFilters=Clear Filters
 @MODULE_ID@.dashboard.tabs.orders=Orders
 @MODULE_ID@.dashboard.tabs.orders.filters.patient=Patient
@@ -59,7 +60,7 @@
 
 @MODULE_ID@.datatables.column.order.orderNumber=Order Number
 @MODULE_ID@.datatables.column.order.patient=Patient
-@MODULE_ID@.datatables.column.order.priority=Priority
+@MODULE_ID@.datatables.column.order.urgency=Urgency
 @MODULE_ID@.datatables.column.order.imagingProcedure=Imaging Procedure
 @MODULE_ID@.datatables.column.order.referringPhysician=Referring Physician
 @MODULE_ID@.datatables.column.order.scheduledDate=Scheduled Date
@@ -128,9 +129,10 @@
 @MODULE_ID@.studyResults=Study Results
 
 # Urgency
-@MODULE_ID@.ROUTINE=Routine
-@MODULE_ID@.STAT=Emergency
-@MODULE_ID@.ON_SCHEDULED_DATE=On scheduled date
+@MODULE_ID@.order.urgency.allurgencies=All urgencies
+@MODULE_ID@.order.urgency.ROUTINE=Routine
+@MODULE_ID@.order.urgency.STAT=Emergency
+@MODULE_ID@.order.urgency.ON_SCHEDULED_DATE=On scheduled date
 
 # Scheduled Status
 @MODULE_ID@.SCHEDULED=SCHEDULED
