RAD-303 Rethink exceptions of API
throw openmrs APIException in service methods for cases violating business rules, and IllegalArgumentException for cases that are programming errors.
APIExceptions are thrown using message codes from the message properties files, so the client code can catch those and display the error message to the user.

* RadiologyStudyService.saveRadiologyStudy() does not allow saving existing
* use throw APIException in RadiologyOrderServie.placeRadiologyOrder() and
discontinueRadiologyOrder()
* catch APIException in RadiologyOrderFormController.saveRadiologyOrder()
* reduce code in catch block in
RadiologyOrderFormController.saveRadiologyOrder() only to the service call
* return in save/discontinueRadiologyOrder in controller after redirect since
model objects in model and view will not be used.

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -117,6 +117,11 @@
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.radiologyOrder.clinicalHistory=Clinical History
 
+@MODULE_ID@.RadiologyOrder.cannot.discontinue.discontinued=Cannot discontinue already discontinued radiology order
+@MODULE_ID@.RadiologyOrder.cannot.discontinue.inProgressOrcompleted=Cannot discontinue a radiology order that is already in progress or completed
+
+@MODULE_ID@.RadiologyStudy.cannot.edit.existing=Cannot edit an existing radiology study
+
 @MODULE_ID@.MrrtReportTemplate.imported=Report template imported
 @MODULE_ID@.MrrtReportTemplate.not.imported.empty=Failed to import report template because it was empty
 
