RAD-343 REST search for RadiologyOrder by accession number
* add new parameter to RadiologyOrderSearchHandler
* add entry to message.properties
* add accession number input field to filters in radiologyOrdersTab
* add component tests for RadiologyOrderSearchHandler

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -28,8 +28,9 @@
 @MODULE_ID@.dashboard.tabs.filters.filterby=Filter by
 @MODULE_ID@.dashboard.tabs.filters.filter=Filter
 @MODULE_ID@.dashboard.tabs.filters.clearFilters=Clear Filters
+
 @MODULE_ID@.dashboard.tabs.orders=Orders
-@MODULE_ID@.dashboard.tabs.orders.filters.patient=Patient
+@MODULE_ID@.dashboard.tabs.orders.filters.accessionNumber=Accession Number
 
 @MODULE_ID@.dashboard.tabs.reports=Reports
 @MODULE_ID@.dashboard.tabs.reports.filters.date=Date
@@ -58,7 +59,7 @@
 @MODULE_ID@.datatables.next=Next
 @MODULE_ID@.datatables.last=Last
 
-@MODULE_ID@.datatables.column.order.orderNumber=Order Number
+@MODULE_ID@.datatables.column.order.accessionNumber=Accession Number
 @MODULE_ID@.datatables.column.order.patient=Patient
 @MODULE_ID@.datatables.column.order.urgency=Urgency
 @MODULE_ID@.datatables.column.order.imagingProcedure=Imaging Procedure
