Change filter design
* add placeholder and remove label of filters in radiologyReportsTab and
  radiologyReportsTemplateTab
* modify entries in messages.properties

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -33,9 +33,8 @@
 @MODULE_ID@.dashboard.tabs.orders.filters.accessionNumber=Accession Number
 
 @MODULE_ID@.dashboard.tabs.reports=Reports
-@MODULE_ID@.dashboard.tabs.reports.filters.date=Date
-@MODULE_ID@.dashboard.tabs.reports.filters.date.from=from
-@MODULE_ID@.dashboard.tabs.reports.filters.date.to=to
+@MODULE_ID@.dashboard.tabs.reports.filters.date.from=from date
+@MODULE_ID@.dashboard.tabs.reports.filters.date.to=to date
 @MODULE_ID@.dashboard.tabs.reports.filters.status=Status
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Principal Results Interpreter
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Proposals after two characters
@@ -97,6 +96,7 @@
 @MODULE_ID@.report.form.unclaim.dialog.button.ok=Ok
 @MODULE_ID@.report.form.unclaim.dialog.button.cancel=Cancel
 
+@MODULE_ID@.report.status.selectStatus=Select status
 @MODULE_ID@.report.status.COMPLETED=Completed
 @MODULE_ID@.report.status.CLAIMED=Claimed
 @MODULE_ID@.report.status.DISCONTINUED=Discontinued
