RAD-307 View report templates from list

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -12,6 +12,15 @@
 @MODULE_ID@.report.template.imported=Report template imported
 @MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
 
+@MODULE_ID@.report.template.view.templateMetadata.boxheader=Template Metadata
+@MODULE_ID@.report.template.view.templateBody.boxheader=Template Body
+@MODULE_ID@.report.template.view.templateMetadata.title=Title
+@MODULE_ID@.report.template.view.templateMetadata.creator=Creator
+@MODULE_ID@.report.template.view.templateMetadata.publisher=Publisher
+@MODULE_ID@.report.template.view.templateMetadata.rights=Rights
+@MODULE_ID@.report.template.view.templateMetadata.description=Description
+@MODULE_ID@.report.template.view.templateMetadata.identifier=Identifier
+
 @MODULE_ID@.localHeader.links.patientDashboard=Patient Dashboard
 @MODULE_ID@.localHeader.links.radiologyOrder=Radiology Order
 
