RAD-320 REST search for RadiologyOrder by effective start date
* add new parameters to radiology order search handler
* add input field to radiologyOrderTab.jsp
* add stopped date column to datatable in radiologyOrderTab.jsp and
  patientDashboardRadiologyTab.jsp
* add and modify entries in messages.properties
* add component tests for RadiologyOrderSearchHandler

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -31,11 +31,13 @@
 
 @MODULE_ID@.dashboard.tabs.orders=Orders
 @MODULE_ID@.dashboard.tabs.orders.filters.accessionNumber=Accession Number
+@MODULE_ID@.dashboard.tabs.orders.filters.effectiveStartDate.from=from start date
+@MODULE_ID@.dashboard.tabs.orders.filters.effectiveStartDate.to=to start date
 
 @MODULE_ID@.dashboard.tabs.reports=Reports
+
 @MODULE_ID@.dashboard.tabs.reports.filters.date.from=from date
 @MODULE_ID@.dashboard.tabs.reports.filters.date.to=to date
-@MODULE_ID@.dashboard.tabs.reports.filters.status=Status
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Principal Results Interpreter
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Proposals after two characters
 
@@ -58,13 +60,14 @@
 @MODULE_ID@.datatables.next=Next
 @MODULE_ID@.datatables.last=Last
 
-@MODULE_ID@.datatables.column.order.accessionNumber=Accession Number
+@MODULE_ID@.datatables.column.order.accessionNumber=Accession No.
 @MODULE_ID@.datatables.column.order.patient=Patient
 @MODULE_ID@.datatables.column.order.urgency=Urgency
 @MODULE_ID@.datatables.column.order.imagingProcedure=Imaging Procedure
 @MODULE_ID@.datatables.column.order.referringPhysician=Referring Physician
 @MODULE_ID@.datatables.column.order.scheduledDate=Scheduled Date
 @MODULE_ID@.datatables.column.order.dateActivated=Date Activated
+@MODULE_ID@.datatables.column.order.dateStopped=Date Stopped
 @MODULE_ID@.datatables.column.order.reason=Reason (Coded)
 @MODULE_ID@.datatables.column.order.reasonNonCoded=Reason (Free Text)
 @MODULE_ID@.datatables.column.order.clinicalHistory=Clinical History
