--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -8,6 +8,8 @@
 @MODULE_ID@.addOrder=Add Radiology Order
 @MODULE_ID@.imagingProcedure=Imaging Procedure
 
+@MODULE_ID@.order.creation.scheduledDate.placeholder=Enter scheduled date
+
 @MODULE_ID@.report.template.search.title=Title
 @MODULE_ID@.report.template.imported=Report template imported
 @MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
