RAD-354 Overhaul ReportService
* rename createAndClaimRadiologyReport to createRadiologyReport (in service and
controller)
* rename saveRadiologyReport to saveRadiologyReportDraft
* prevent saveRadiologyReportDraft if radiologyReport.reportId is null
* prevent saveRadiologyReportDraft if order already has a completed report
* harmonize tests and javadoc of Service methods
* make createRadiologyReport/saveDraft/complete synchronized
* add class javadoc to RadiologyReportService
* make tests cleaner
* throw APIExceptions using message property codes in RadiologyReportService
* catch APIExceptions in controller
* set session attribute on success/err in controller

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -124,6 +124,17 @@
 
 @MODULE_ID@.RadiologyStudy.cannot.edit.existing=Cannot edit an existing radiology study
 
+@MODULE_ID@.RadiologyReport.cannot.create.for.not.completed.order=Cannot create a radiology report for an uncompleted order
+@MODULE_ID@.RadiologyReport.cannot.create.already.claimed=Cannot create a radiology report since this order has already been claimed for reporting
+@MODULE_ID@.RadiologyReport.cannot.create.already.completed=Cannot create a radiology report since this order has already been reported
+@MODULE_ID@.RadiologyReport.cannot.saveDraft.already.completed=Cannot save the radiology report as draft since the report is already completed
+@MODULE_ID@.RadiologyReport.cannot.saveDraft.already.discontinued=Cannot save the radiology report as draft since the report is already discontinued
+@MODULE_ID@.RadiologyReport.cannot.saveDraft.already.reported=Cannot save the radiology report draft since its order has already been reported
+@MODULE_ID@.RadiologyReport.savedDraft=Report draft saved
+@MODULE_ID@.RadiologyReport.cannot.complete.completed=Cannot complete this radiology report since its already completed
+@MODULE_ID@.RadiologyReport.cannot.complete.discontinued=Cannot complete this radiology report since its already discontinued
+@MODULE_ID@.RadiologyReport.completed=Report completed
+
 @MODULE_ID@.MrrtReportTemplate.imported=Report template imported
 @MODULE_ID@.MrrtReportTemplate.not.imported.empty=Failed to import report template because it was empty
 
