RAD-334 Add MrrtReportTemplateValidator

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -13,6 +13,9 @@
 @MODULE_ID@.report.template.search.title=Title
 @MODULE_ID@.report.template.imported=Report template imported
 @MODULE_ID@.report.template.not.imported.empty=Failed to import report template because it was empty
+@MODULE_ID@.report.template.validation.error=Template validation error
+@MODULE_ID@.report.template.validation.error.meta.charset=Template file should have exactly one meta element with charset attribute
+@MODULE_ID@.report.template.validation.error.meta.dublinCore=Template file should have exactly one meta element encoding dublin core attributes
 
 @MODULE_ID@.report.template.view.templateMetadata.boxheader=Template Metadata
 @MODULE_ID@.report.template.view.templateBody.boxheader=Template Body
