RAD-355 Turn unclaim into voidRadiologyReport
* rename unclaimRadiologyReport to voidRadiologyReport
* add liquibase changeset
* adapt hibernate mapping file
* adapt xml test datasets and demo-data.sql
* add messages properties entries and use them in APIException
* add try/catch to controller of voidRadiologyReport
* create tests of controller for redirect/not redirect and session attribute
* remove radiology report status DISCONTINUED, thus from service/dao/rest layers
* remove unused getRadiologyReportsByRadiologyOrderAndRadiologyReportStatus
* adapt SearchCriteria
* adapt REST
* add voided property to RadiologyReportResource
* adapt UI report list filter
* add voidReason to radiologyReportForm and handle its validity in controller
* add VoidRadiologyReportRequest with Validator to ensure voidReason isnt empty
* exclude voided reports hasRadiologyOrderClaimedReport

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -51,6 +51,8 @@
 @MODULE_ID@.dashboard.tabs.reports.filters.date.to=to date
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter=Principal Results Interpreter
 @MODULE_ID@.dashboard.tabs.reports.filters.principalResultsInterpreter.title=Proposals after two characters
+@MODULE_ID@.dashboard.tabs.reports.filters.includeAll.title=Includes deleted reports
+@MODULE_ID@.dashboard.tabs.reports.filters.includeAll.description=Include deleted
 
 @MODULE_ID@.dashboard.tabs.reportTemplates=Report Templates
 @MODULE_ID@.dashboard.tabs.reportTemplates.filters.title=Title
@@ -105,15 +107,14 @@
 
 @MODULE_ID@.report.principalResultsInterpreter=Principal Results Interpreter
 
-@MODULE_ID@.report.form.unclaim.dialog.title=Unclaim Report
-@MODULE_ID@.report.form.unclaim.dialog.message=Are you sure you want to unclaim this report?
-@MODULE_ID@.report.form.unclaim.dialog.button.ok=Ok
-@MODULE_ID@.report.form.unclaim.dialog.button.cancel=Cancel
+@MODULE_ID@.report.form.void.dialog.title=Delete Report
+@MODULE_ID@.report.form.void.dialog.message=Are you sure you want to delete this report?
+@MODULE_ID@.report.form.void.dialog.button.ok=Ok
+@MODULE_ID@.report.form.void.dialog.button.cancel=Cancel
 
 @MODULE_ID@.report.status.selectStatus=Select status
 @MODULE_ID@.report.status.COMPLETED=Completed
 @MODULE_ID@.report.status.CLAIMED=Claimed
-@MODULE_ID@.report.status.DISCONTINUED=Discontinued
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
@@ -128,12 +129,14 @@
 @MODULE_ID@.RadiologyReport.cannot.create.already.claimed=Cannot create a radiology report since this order has already been claimed for reporting
 @MODULE_ID@.RadiologyReport.cannot.create.already.completed=Cannot create a radiology report since this order has already been reported
 @MODULE_ID@.RadiologyReport.cannot.saveDraft.already.completed=Cannot save the radiology report as draft since the report is already completed
-@MODULE_ID@.RadiologyReport.cannot.saveDraft.already.discontinued=Cannot save the radiology report as draft since the report is already discontinued
+@MODULE_ID@.RadiologyReport.cannot.saveDraft.already.voided=Cannot save the radiology report as draft since the report is already voided
 @MODULE_ID@.RadiologyReport.cannot.saveDraft.already.reported=Cannot save the radiology report draft since its order has already been reported
 @MODULE_ID@.RadiologyReport.savedDraft=Report draft saved
 @MODULE_ID@.RadiologyReport.cannot.complete.completed=Cannot complete this radiology report since its already completed
-@MODULE_ID@.RadiologyReport.cannot.complete.discontinued=Cannot complete this radiology report since its already discontinued
+@MODULE_ID@.RadiologyReport.cannot.complete.voided=Cannot complete this radiology report since its already voided
 @MODULE_ID@.RadiologyReport.completed=Report completed
+@MODULE_ID@.RadiologyReport.cannot.void.completed=Cannot void this radiology report since its already completed
+@MODULE_ID@.RadiologyReport.voided=Report voided
 
 @MODULE_ID@.MrrtReportTemplate.imported=Report template imported
 @MODULE_ID@.MrrtReportTemplate.not.imported.empty=Failed to import report template because it was empty
@@ -188,7 +191,6 @@
 @MODULE_ID@.radiologyReportProvider=Results Interpreter
 @MODULE_ID@.radiologyReportDate=Completion Date
 @MODULE_ID@.radiologyReportClaim=Claim Report
-@MODULE_ID@.radiologyReportUnclaim=Unclaim
 @MODULE_ID@.radiologyReportSave=Save as Draft
 @MODULE_ID@.radiologyReportComplete=Save & Complete
 @MODULE_ID@.radiologyReportResume=Resume work on Report
