RAD-352 Provide radiology order details as a portlet
* add RadiologyOrderDetailsPortletController.java
* override populateModel-method
* add radiology order details portlet
* add unit tests for RadiologyOrderDetailsPortletController.java
* add unit test for RadiologyOrdersTabPortletController.java
* add unit test for RadiologyReportsTabPortletController.java

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -127,6 +127,7 @@
 @MODULE_ID@.report.status.COMPLETED=Completed
 @MODULE_ID@.report.status.DRAFT=Draft
 
+@MODULE_ID@.radiologyOrder.accessionNumber=Accession Number
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.radiologyOrder.clinicalHistory=Clinical History
