RAD-356 Rename CLAIMED to DRAFT
* rename enum name CLAIMED to DRAFT
* merge status column with voided column in radiologyReportsTab

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -114,7 +114,7 @@
 
 @MODULE_ID@.report.status.selectStatus=Select status
 @MODULE_ID@.report.status.COMPLETED=Completed
-@MODULE_ID@.report.status.CLAIMED=Claimed
+@MODULE_ID@.report.status.DRAFT=Draft
 
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
