--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -111,6 +111,14 @@
 @MODULE_ID@.report.form.void.dialog.message=Are you sure you want to delete this report?
 @MODULE_ID@.report.form.void.dialog.button.ok=Ok
 @MODULE_ID@.report.form.void.dialog.button.cancel=Cancel
+@MODULE_ID@.report.form.boxheader=Report
+@MODULE_ID@.report.form.report.id=Id
+@MODULE_ID@.report.form.report.status=Status
+@MODULE_ID@.report.form.report.diagnosis=Diagnosis
+@MODULE_ID@.report.form.report.principalResultsInterpreter=Results Interpreter
+@MODULE_ID@.report.form.report.date=Completion Date
+@MODULE_ID@.report.form.button.saveDraft=Save Draft
+@MODULE_ID@.report.form.button.complete=Complete
 
 @MODULE_ID@.report.status.selectStatus=Select status
 @MODULE_ID@.report.status.COMPLETED=Completed
@@ -136,7 +144,7 @@
 @MODULE_ID@.RadiologyReport.cannot.complete.voided=Cannot complete this radiology report since its already voided
 @MODULE_ID@.RadiologyReport.completed=Report completed
 @MODULE_ID@.RadiologyReport.cannot.void.completed=Cannot void this radiology report since its already completed
-@MODULE_ID@.RadiologyReport.voided=Report voided
+@MODULE_ID@.RadiologyReport.voided=Report deleted
 
 @MODULE_ID@.MrrtReportTemplate.imported=Report template imported
 @MODULE_ID@.MrrtReportTemplate.not.imported.empty=Failed to import report template because it was empty
@@ -184,17 +192,10 @@
 @MODULE_ID@.IN_SYNC=In Sync
 @MODULE_ID@.OUT_OF_SYNC=Out of Sync
 
-@MODULE_ID@.radiologyReportTitle=Report
-@MODULE_ID@.radiologyReportId=Id
-@MODULE_ID@.reportStatus=Status
-@MODULE_ID@.radiologyReportDiagnosis=Diagnosis
-@MODULE_ID@.radiologyReportProvider=Results Interpreter
-@MODULE_ID@.radiologyReportDate=Completion Date
 @MODULE_ID@.radiologyReportClaim=Claim Report
-@MODULE_ID@.radiologyReportSave=Save as Draft
-@MODULE_ID@.radiologyReportComplete=Save & Complete
 @MODULE_ID@.radiologyReportResume=Resume work on Report
 @MODULE_ID@.radiologyReportShow=Show completed Report
+@MODULE_ID@.radiologyReportTitle=Report
 
 # Modality Names
 @MODULE_ID@.CR=Computed Radiography
