--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -106,6 +106,11 @@
 @MODULE_ID@.datatables.column.report.template.description=Description
 @MODULE_ID@.datatables.column.report.template.rights=Rights
 
+@MODULE_ID@.rest.error.dialog.title=Error
+@MODULE_ID@.rest.error.dialog.message.line1=Results couldn't be loaded, an error occurred while trying to fetch data.
+@MODULE_ID@.rest.error.dialog.message.line2=Please see the console log for more details.
+@MODULE_ID@.rest.error.dialog.button.ok=OK
+
 @MODULE_ID@.report.boxheader=Reports
 
 @MODULE_ID@.report.principalResultsInterpreter=Principal Results Interpreter
