--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -16,6 +16,7 @@
 @MODULE_ID@.report.template.validation.error=Template validation error
 @MODULE_ID@.report.template.validation.error.meta.charset=Template file should have exactly one meta element with charset attribute
 @MODULE_ID@.report.template.validation.error.meta.dublinCore=Template file should have exactly one meta element encoding dublin core attributes
+@MODULE_ID@.report.template.parser.error=Error parsing template file
 
 @MODULE_ID@.report.template.view.templateMetadata.boxheader=Template Metadata
 @MODULE_ID@.report.template.view.templateBody.boxheader=Template Body
