RAD-366 Add RadiologyModality
add entity RadiologyModality with DAO, service, view layers

* add RadiologyModality entity
* add DAO with Hibernate implementation
* add Service with implementation
* add Validator
* add PropertyEditor
* add Controller
* add jsp for creation/display

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -111,6 +111,9 @@
 @MODULE_ID@.rest.error.dialog.message.line2=Please see the console log for more details.
 @MODULE_ID@.rest.error.dialog.button.ok=OK
 
+@MODULE_ID@.radiologyModality.form.boxheader=Radiology Modality
+@MODULE_ID@.radiologyModality.form.boxheader.add=Add Radiology Modality
+
 @MODULE_ID@.report.boxheader=Reports
 
 @MODULE_ID@.report.principalResultsInterpreter=Principal Results Interpreter
@@ -136,6 +139,10 @@
 @MODULE_ID@.radiologyOrder.orderReason=Reason (Coded)
 @MODULE_ID@.radiologyOrder.orderReasonNonCoded=Reason (Free Text)
 @MODULE_ID@.radiologyOrder.clinicalHistory=Clinical History
+
+@MODULE_ID@.RadiologyModality.aeTitle=AE Title
+@MODULE_ID@.RadiologyModality.saved=Radiology modality saved
+@MODULE_ID@.RadiologyModality.error.max.aeTitle=Cannot exceed 16 characters
 
 @MODULE_ID@.RadiologyOrder.cannot.discontinue.discontinued=Cannot discontinue already discontinued radiology order
 @MODULE_ID@.RadiologyOrder.cannot.discontinue.inProgressOrcompleted=Cannot discontinue a radiology order that is already in progress or completed
