Enable editing of RadiologyModality
* Change ADD_RADIOLOGY_MODALITY privilege into MANAGE as with other metadata
* Add test and clean javadoc for saveRadiologyModality to show it can be
modified
* let radiologyModalityForm.jsp handle creation/editing

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -114,6 +114,7 @@
 
 @MODULE_ID@.radiologyModality.form.boxheader=Radiology Modality
 @MODULE_ID@.radiologyModality.form.boxheader.add=Add Radiology Modality
+@MODULE_ID@.radiologyModality.form.boxheader.edit=Edit Radiology Modality
 
 @MODULE_ID@.report.boxheader=Reports
 
