--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -26,6 +26,10 @@
 @MODULE_ID@.report.template.view.templateMetadata.rights=Rights
 @MODULE_ID@.report.template.view.templateMetadata.description=Description
 @MODULE_ID@.report.template.view.templateMetadata.identifier=Identifier
+@MODULE_ID@.report.template.view.templateMetadata.referenceTerms=Reference Terms
+@MODULE_ID@.report.template.view.templateMetadata.referenceTerms.code=Code
+@MODULE_ID@.report.template.view.templateMetadata.referenceTerms.scheme=Scheme
+@MODULE_ID@.report.template.view.templateMetadata.referenceTerms.version=Version
 
 @MODULE_ID@.localHeader.links.patientDashboard=Patient Dashboard
 @MODULE_ID@.localHeader.links.radiologyOrder=Radiology Order
