RAD-371 Enable retiring a modality
* add RadiologyModalityService.retireRadiologyModality()
* adapt Validator to ensure retireReason is not empty on retired
* use ValidateUtil.validateFieldLengths on necessary fields
* remove a message property code and add controller and jsp changes

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -147,7 +147,7 @@
 
 @MODULE_ID@.RadiologyModality.aeTitle=AE Title
 @MODULE_ID@.RadiologyModality.saved=Radiology modality saved
-@MODULE_ID@.RadiologyModality.error.max.aeTitle=Cannot exceed 16 characters
+@MODULE_ID@.RadiologyModality.retired=Radiology modality retired
 
 @MODULE_ID@.RadiologyOrder.cannot.discontinue.discontinued=Cannot discontinue already discontinued radiology order
 @MODULE_ID@.RadiologyOrder.cannot.discontinue.inProgressOrcompleted=Cannot discontinue a radiology order that is already in progress or completed
