RAD-373 Add modalities tab to UI
* add controller + jsp for modality tab
* add demo-data modalities
* add demo-data radiology admin role
* add privileges GET/MANAGE rad modalities via liquibase

--- a/omod/src/main/resources/messages.properties
+++ b/omod/src/main/resources/messages.properties
@@ -6,7 +6,9 @@
 @MODULE_ID@.radiologyOrder=Radiology Order
 @MODULE_ID@.radiologyOrders=Radiology Orders
 @MODULE_ID@.addOrder=Add Radiology Order
+@MODULE_ID@.addModality=Add Radiology Modality
 @MODULE_ID@.imagingProcedure=Imaging Procedure
+@MODULE_ID@.active=Active
 
 @MODULE_ID@.order.creation.scheduledDate.placeholder=Enter scheduled date
 
@@ -69,6 +71,10 @@
 @MODULE_ID@.reportTemplates.import.popup.upload=Upload
 @MODULE_ID@.reportTemplates.import.popup.button=Import Report Template
 
+@MODULE_ID@.dashboard.tabs.radiologyModalities=Modalities
+@MODULE_ID@.dashboard.tabs.radiologyModalities.boxheader=Radiology Modalities
+@MODULE_ID@.dashboard.tabs.radiologyModalities.filters.includeAll.description=Includes retired
+
 @MODULE_ID@.datatables.noresult=No Result
 @MODULE_ID@.datatables.loading=Loading...
 @MODULE_ID@.datatables.show=Show
@@ -97,11 +103,9 @@
 @MODULE_ID@.datatables.column.report.order=Radiology Order
 @MODULE_ID@.datatables.column.report.date=Date
 @MODULE_ID@.datatables.column.report.principalResultsInterpreter=Principal Results Interpreter
-@MODULE_ID@.datatables.column.report.status=Status
 @MODULE_ID@.datatables.column.report.dateCreated=Date created
 @MODULE_ID@.datatables.column.report.createdBy=Created By
 
-@MODULE_ID@.datatables.column.action=Action
 @MODULE_ID@.datatables.column.report.template.id=Id
 @MODULE_ID@.datatables.column.report.template.title=Title
 @MODULE_ID@.datatables.column.report.template.creator=Creator
@@ -109,6 +113,13 @@
 @MODULE_ID@.datatables.column.report.template.type=Type
 @MODULE_ID@.datatables.column.report.template.description=Description
 @MODULE_ID@.datatables.column.report.template.rights=Rights
+
+@MODULE_ID@.datatables.column.modality.aeTitle=AE Title
+@MODULE_ID@.datatables.column.modality.name=Name
+@MODULE_ID@.datatables.column.modality.description=Description
+
+@MODULE_ID@.datatables.column.action=Action
+@MODULE_ID@.datatables.column.status=Status
 
 @MODULE_ID@.rest.error.dialog.title=Error
 @MODULE_ID@.rest.error.dialog.message.line1=Results couldn't be loaded, an error occurred while trying to fetch data.
